--- a/hi.html
+++ b/hi.html
@@ -8,37 +8,37 @@
 </head>
 <body>
     <section class="images">
-        <img src="/images/IMG_5885.JPG" alt="">
-        <img src="/images/IMG_5886.JPEG" alt="">
-        <img src="/images/IMG_5887.JPG" alt="">
-        <img src="/images/IMG_5888.JPG" alt="">
-        <img src="/images/IMG_5889.JPG" alt="">
-        <img src="/images/IMG_5890.JPG" alt="">
-        <img src="/images/IMG_5891.JPG" alt="">
-        <img src="/images/IMG_5892.JPG" alt="">
-        <img src="/images/IMG_5893.JPG" alt="">
-        <img src="/images/IMG_5894.JPG" alt="">
-        <img src="/images/IMG_5895.JPG" alt="">
-        <img src="/images/IMG_5896.JPG" alt="">
-        <img src="/images/IMG_5897.JPG" alt="">
-        <img src="/images/IMG_5899.JPG" alt="">
-        <img src="/images/IMG_5900.JPG" alt="">
-        <img src="/images/IMG_5901.JPG" alt="">
-        <img src="/images/IMG_5902.JPG" alt="">
-        <img src="/images/IMG_5903.JPG" alt="">
-        <img src="/images/IMG_5904.JPG" alt="">
-        <img src="/images/IMG_5905.JPG" alt="">
-        <img src="/images/IMG_5906.JPEG" alt="">
-        <img src="/images/IMG_5907.JPG" alt="">
-        <img src="/images/IMG_5908.JPG" alt="">
-        <img src="/images/IMG_5909.JPG" alt="">
-        <img src="/images/IMG_5910.JPG" alt="">
-        <img src="/images/IMG_5911.JPEG" alt="">
-        <img src="/images/IMG_5912.JPG" alt="">
-        <img src="/images/IMG_5913.JPG" alt="">
-        <img src="/images/IMG_5914.JPG" alt="">
-        <img src="/images/IMG_5915.JPG" alt="">
-        <img src="/images/IMG_5885.JPG" alt="">
+        <img src="foto-vs/images/IMG_5885.JPG" alt="">
+        <img src="foto-vs/images/IMG_5886.JPEG" alt="">
+        <img src="foto-vs/images/IMG_5887.JPG" alt="">
+        <img src="foto-vs/images/IMG_5888.JPG" alt="">
+        <img src="foto-vs/images/IMG_5889.JPG" alt="">
+        <img src="foto-vs/images/IMG_5890.JPG" alt="">
+        <img src="foto-vs/images/IMG_5891.JPG" alt="">
+        <img src="foto-vs/images/IMG_5892.JPG" alt="">
+        <img src="foto-vs/images/IMG_5893.JPG" alt="">
+        <img src="foto-vs/images/IMG_5894.JPG" alt="">
+        <img src="foto-vs/images/IMG_5895.JPG" alt="">
+        <img src="foto-vs/images/IMG_5896.JPG" alt="">
+        <img src="foto-vs/images/IMG_5897.JPG" alt="">
+        <img src="foto-vs/images/IMG_5899.JPG" alt="">
+        <img src="foto-vs/images/IMG_5900.JPG" alt="">
+        <img src="foto-vs/images/IMG_5901.JPG" alt="">
+        <img src="foto-vs/images/IMG_5902.JPG" alt="">
+        <img src="foto-vs/images/IMG_5903.JPG" alt="">
+        <img src="foto-vs/images/IMG_5904.JPG" alt="">
+        <img src="foto-vs/images/IMG_5905.JPG" alt="">
+        <img src="foto-vs/images/IMG_5906.JPEG" alt="">
+        <img src="foto-vs/images/IMG_5907.JPG" alt="">
+        <img src="foto-vs/images/IMG_5908.JPG" alt="">
+        <img src="foto-vs/images/IMG_5909.JPG" alt="">
+        <img src="foto-vs/images/IMG_5910.JPG" alt="">
+        <img src="foto-vs/images/IMG_5911.JPEG" alt="">
+        <img src="foto-vs/images/IMG_5912.JPG" alt="">
+        <img src="foto-vs/images/IMG_5913.JPG" alt="">
+        <img src="foto-vs/images/IMG_5914.JPG" alt="">
+        <img src="foto-vs/images/IMG_5915.JPG" alt="">
+        <img src="foto-vs/images/IMG_5885.JPG" alt="">
     </section>
 
     <div class="text">
