--- a/hi.html
+++ b/hi.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <section class="images">
-        <img src="foto-vs/images/IMG_5885.JPG" alt="">
+        <img src="images/IMG_5885.JPG" alt="">
         <img src="foto-vs/images/IMG_5886.JPEG" alt="">
         <img src="foto-vs/images/IMG_5887.JPG" alt="">
         <img src="foto-vs/images/IMG_5888.JPG" alt="">
